GS-9908 Fixed care2 promo wrapping. no-rating parent_0 style no longer needed extra-long width of 99px instead of 72px for everyone else

--- a/src/webapp/res/css/school/profile.css
+++ b/src/webapp/res/css/school/profile.css
@@ -203,11 +203,6 @@ a.parent_rating, span.parent_rating {
 	float: left;
 }
 
-/* The parent_0 background image needs an expanded width */
-a.parent_0 {
-    width: 99px;
-}
-
 a:hover.parent_rating {
     text-decoration: none;
 }
